meta/unpackaged/objects/Manufacturing_Event__e.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <defaultValue>&quot;Manufacturing Event&quot;</defaultValue>
        <label>Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload_Field_1__c</fullName>
        <defaultValue>&quot;Manufacturing Payload 1&quot;</defaultValue>
        <label>Payload Field 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload_Field_2__c</fullName>
        <defaultValue>&quot;Manufacturing Payload 2&quot;</defaultValue>
        <label>Payload Field 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Manufacturing Event</label>
    <pluralLabel>Manufacturing Events</pluralLabel>
</CustomObject>